--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Generador de contraseñas - James",
   "icons": [
     {
       "src": "favicon.ico",
